--- a/fase_2_EDA_medicamentos.ipynb
+++ b/fase_2_EDA_medicamentos.ipynb
@@ -3395,7 +3395,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_99063/2175063590.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_19503/2175063590.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3412,7 +3412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "6915e798",
    "metadata": {},
    "outputs": [
@@ -3426,17 +3426,6 @@
      "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mEl kernel se bloqueó al ejecutar código en la celda actual o en una celda anterior. \n",
-      "\u001b[1;31mRevise el código de las celdas para identificar una posible causa del error. \n",
-      "\u001b[1;31mHaga clic <a href='https://aka.ms/vscodeJupyterKernelCrash'>aquí</a> para obtener más información. \n",
-      "\u001b[1;31mVea Jupyter <a href='command:jupyter.viewOutput'>log</a> para obtener más detalles."
-     ]
     }
    ],
    "source": [
@@ -3447,12 +3436,300 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "7c563715",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 206993 entries, 0 to 207660\n",
+      "Data columns (total 59 columns):\n",
+      " #   Column                                     Non-Null Count   Dtype \n",
+      "---  ------                                     --------------   ----- \n",
+      " 0   id                                         206993 non-null  object\n",
+      " 1   codigo                                     206993 non-null  object\n",
+      " 2   numeroRegistro                             206993 non-null  object\n",
+      " 3   nomeProduto                                206993 non-null  object\n",
+      " 4   numeroProcesso                             206993 non-null  object\n",
+      " 5   empresaNome                                206993 non-null  object\n",
+      " 6   empresaCnpj                                206993 non-null  object\n",
+      " 7   principioAtivo                             206993 non-null  object\n",
+      " 8   tarja                                      150944 non-null  object\n",
+      " 9   medicamentoReferencia                      133327 non-null  object\n",
+      " 10  classesTerapeuticas                        206993 non-null  object\n",
+      " 11  bula_txt                                   206993 non-null  object\n",
+      " 12  bula_pdf                                   206993 non-null  object\n",
+      " 13  bula_txt_profissional                      206993 non-null  object\n",
+      " 14  bula_pdf_profissional                      206993 non-null  object\n",
+      " 15  categoriaRegulatoria                       206471 non-null  object\n",
+      " 16  situacaoRegistro                           206993 non-null  object\n",
+      " 17  dataProduto                                206993 non-null  object\n",
+      " 18  dataVencimentoRegistro                     206675 non-null  object\n",
+      " 19  dataPublicacao                             206993 non-null  object\n",
+      " 20  indicacao                                  206993 non-null  object\n",
+      " 21  apresentacoes.codigo                       206993 non-null  object\n",
+      " 22  apresentacao                               206993 non-null  object\n",
+      " 23  formasFarmaceuticas                        206993 non-null  object\n",
+      " 24  numero                                     206993 non-null  object\n",
+      " 25  apresentacoes.dataPublicacao               206993 non-null  object\n",
+      " 26  validade                                   206993 non-null  object\n",
+      " 27  tipoValidade                               206993 non-null  object\n",
+      " 28  registro                                   206679 non-null  object\n",
+      " 29  principiosAtivos                           206993 non-null  object\n",
+      " 30  qtdUnidadeMedida                           105162 non-null  object\n",
+      " 31  embalagemPrimariaTodas                     199716 non-null  object\n",
+      " 32  embalagemSecundariaTodas                   203853 non-null  object\n",
+      " 33  viasAdministracao                          198140 non-null  object\n",
+      " 34  ifaUnico                                   206993 non-null  object\n",
+      " 35  conservacao                                206587 non-null  object\n",
+      " 36  restricaoPrescricao                        196045 non-null  object\n",
+      " 37  restricaoUso                               151938 non-null  object\n",
+      " 38  destinacao                                 202720 non-null  object\n",
+      " 39  restricaoHospitais                         156178 non-null  object\n",
+      " 40  apresentacoes.tarja                        145310 non-null  object\n",
+      " 41  apresentacoes.medicamentoReferencia        206993 non-null  object\n",
+      " 42  apresentacaoFracionada                     206993 non-null  object\n",
+      " 43  tipoAutorizacao                            206993 non-null  object\n",
+      " 44  ativa                                      206993 non-null  object\n",
+      " 45  emAnalise                                  206993 non-null  object\n",
+      " 46  inativa                                    206993 non-null  object\n",
+      " 47  embalagemSecundaria.tipo                   203062 non-null  object\n",
+      " 48  fabricantesNacionais_fabricante            159629 non-null  object\n",
+      " 49  fabricantesNacionais_cnpj                  159629 non-null  object\n",
+      " 50  fabricantesNacionais_pais                  159629 non-null  object\n",
+      " 51  fabricantesNacionais_uf                    159629 non-null  object\n",
+      " 52  fabricantesNacionais_cidade                159629 non-null  object\n",
+      " 53  fabricantesNacionais_etapaFabricacao       105120 non-null  object\n",
+      " 54  fabricantesInternacionais_fabricante       55167 non-null   object\n",
+      " 55  fabricantesInternacionais_endereco         48522 non-null   object\n",
+      " 56  fabricantesInternacionais_pais             55167 non-null   object\n",
+      " 57  fabricantesInternacionais_etapaFabricacao  33377 non-null   object\n",
+      " 58  fabricantesInternacionais_codigoUnico      39087 non-null   object\n",
+      "dtypes: object(59)\n",
+      "memory usage: 35.1 GB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Vista general\n",
+    "print(df_clean.info(memory_usage='deep'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "e5f2e3c5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clean.to_json(\"df_revision_valores_faltantes.json\", orient=\"records\", force_ascii=False)\n"
+    "df_in_str = df_clean.astype(\"string\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "5849a629",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                                           string[python]\n",
+       "codigo                                       string[python]\n",
+       "numeroRegistro                               string[python]\n",
+       "nomeProduto                                  string[python]\n",
+       "numeroProcesso                               string[python]\n",
+       "empresaNome                                  string[python]\n",
+       "empresaCnpj                                  string[python]\n",
+       "principioAtivo                               string[python]\n",
+       "tarja                                        string[python]\n",
+       "medicamentoReferencia                        string[python]\n",
+       "classesTerapeuticas                          string[python]\n",
+       "bula_txt                                     string[python]\n",
+       "bula_pdf                                     string[python]\n",
+       "bula_txt_profissional                        string[python]\n",
+       "bula_pdf_profissional                        string[python]\n",
+       "categoriaRegulatoria                         string[python]\n",
+       "situacaoRegistro                             string[python]\n",
+       "dataProduto                                  string[python]\n",
+       "dataVencimentoRegistro                       string[python]\n",
+       "dataPublicacao                               string[python]\n",
+       "indicacao                                    string[python]\n",
+       "apresentacoes.codigo                         string[python]\n",
+       "apresentacao                                 string[python]\n",
+       "formasFarmaceuticas                          string[python]\n",
+       "numero                                       string[python]\n",
+       "apresentacoes.dataPublicacao                 string[python]\n",
+       "validade                                     string[python]\n",
+       "tipoValidade                                 string[python]\n",
+       "registro                                     string[python]\n",
+       "principiosAtivos                             string[python]\n",
+       "qtdUnidadeMedida                             string[python]\n",
+       "embalagemPrimariaTodas                       string[python]\n",
+       "embalagemSecundariaTodas                     string[python]\n",
+       "viasAdministracao                            string[python]\n",
+       "ifaUnico                                     string[python]\n",
+       "conservacao                                  string[python]\n",
+       "restricaoPrescricao                          string[python]\n",
+       "restricaoUso                                 string[python]\n",
+       "destinacao                                   string[python]\n",
+       "restricaoHospitais                           string[python]\n",
+       "apresentacoes.tarja                          string[python]\n",
+       "apresentacoes.medicamentoReferencia          string[python]\n",
+       "apresentacaoFracionada                       string[python]\n",
+       "tipoAutorizacao                              string[python]\n",
+       "ativa                                        string[python]\n",
+       "emAnalise                                    string[python]\n",
+       "inativa                                      string[python]\n",
+       "embalagemSecundaria.tipo                     string[python]\n",
+       "fabricantesNacionais_fabricante              string[python]\n",
+       "fabricantesNacionais_cnpj                    string[python]\n",
+       "fabricantesNacionais_pais                    string[python]\n",
+       "fabricantesNacionais_uf                      string[python]\n",
+       "fabricantesNacionais_cidade                  string[python]\n",
+       "fabricantesNacionais_etapaFabricacao         string[python]\n",
+       "fabricantesInternacionais_fabricante         string[python]\n",
+       "fabricantesInternacionais_endereco           string[python]\n",
+       "fabricantesInternacionais_pais               string[python]\n",
+       "fabricantesInternacionais_etapaFabricacao    string[python]\n",
+       "fabricantesInternacionais_codigoUnico        string[python]\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_in_str.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "7dd4807c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_light = df_in_str.drop(columns=['bula_txt','bula_txt_profissional'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "9d5c7a88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 206993 entries, 0 to 207660\n",
+      "Data columns (total 57 columns):\n",
+      " #   Column                                     Non-Null Count   Dtype \n",
+      "---  ------                                     --------------   ----- \n",
+      " 0   id                                         206993 non-null  string\n",
+      " 1   codigo                                     206993 non-null  string\n",
+      " 2   numeroRegistro                             206993 non-null  string\n",
+      " 3   nomeProduto                                206993 non-null  string\n",
+      " 4   numeroProcesso                             206993 non-null  string\n",
+      " 5   empresaNome                                206993 non-null  string\n",
+      " 6   empresaCnpj                                206993 non-null  string\n",
+      " 7   principioAtivo                             206993 non-null  string\n",
+      " 8   tarja                                      150944 non-null  string\n",
+      " 9   medicamentoReferencia                      133327 non-null  string\n",
+      " 10  classesTerapeuticas                        206993 non-null  string\n",
+      " 11  bula_pdf                                   206993 non-null  string\n",
+      " 12  bula_pdf_profissional                      206993 non-null  string\n",
+      " 13  categoriaRegulatoria                       206471 non-null  string\n",
+      " 14  situacaoRegistro                           206993 non-null  string\n",
+      " 15  dataProduto                                206993 non-null  string\n",
+      " 16  dataVencimentoRegistro                     206675 non-null  string\n",
+      " 17  dataPublicacao                             206993 non-null  string\n",
+      " 18  indicacao                                  206993 non-null  string\n",
+      " 19  apresentacoes.codigo                       206993 non-null  string\n",
+      " 20  apresentacao                               206993 non-null  string\n",
+      " 21  formasFarmaceuticas                        206993 non-null  string\n",
+      " 22  numero                                     206993 non-null  string\n",
+      " 23  apresentacoes.dataPublicacao               206993 non-null  string\n",
+      " 24  validade                                   206993 non-null  string\n",
+      " 25  tipoValidade                               206993 non-null  string\n",
+      " 26  registro                                   206679 non-null  string\n",
+      " 27  principiosAtivos                           206993 non-null  string\n",
+      " 28  qtdUnidadeMedida                           105162 non-null  string\n",
+      " 29  embalagemPrimariaTodas                     199716 non-null  string\n",
+      " 30  embalagemSecundariaTodas                   203853 non-null  string\n",
+      " 31  viasAdministracao                          198140 non-null  string\n",
+      " 32  ifaUnico                                   206993 non-null  string\n",
+      " 33  conservacao                                206587 non-null  string\n",
+      " 34  restricaoPrescricao                        196045 non-null  string\n",
+      " 35  restricaoUso                               151938 non-null  string\n",
+      " 36  destinacao                                 202720 non-null  string\n",
+      " 37  restricaoHospitais                         156178 non-null  string\n",
+      " 38  apresentacoes.tarja                        145310 non-null  string\n",
+      " 39  apresentacoes.medicamentoReferencia        206993 non-null  string\n",
+      " 40  apresentacaoFracionada                     206993 non-null  string\n",
+      " 41  tipoAutorizacao                            206993 non-null  string\n",
+      " 42  ativa                                      206993 non-null  string\n",
+      " 43  emAnalise                                  206993 non-null  string\n",
+      " 44  inativa                                    206993 non-null  string\n",
+      " 45  embalagemSecundaria.tipo                   203062 non-null  string\n",
+      " 46  fabricantesNacionais_fabricante            159629 non-null  string\n",
+      " 47  fabricantesNacionais_cnpj                  159629 non-null  string\n",
+      " 48  fabricantesNacionais_pais                  159629 non-null  string\n",
+      " 49  fabricantesNacionais_uf                    159629 non-null  string\n",
+      " 50  fabricantesNacionais_cidade                159629 non-null  string\n",
+      " 51  fabricantesNacionais_etapaFabricacao       105120 non-null  string\n",
+      " 52  fabricantesInternacionais_fabricante       55167 non-null   string\n",
+      " 53  fabricantesInternacionais_endereco         48522 non-null   string\n",
+      " 54  fabricantesInternacionais_pais             55167 non-null   string\n",
+      " 55  fabricantesInternacionais_etapaFabricacao  33377 non-null   string\n",
+      " 56  fabricantesInternacionais_codigoUnico      39087 non-null   string\n",
+      "dtypes: string(57)\n",
+      "memory usage: 767.4 MB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_light.info(memory_usage='deep'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "714d8a8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_light.to_parquet(\n",
+    "    \"df_light.parquet\",\n",
+    "    engine=\"pyarrow\",  \n",
+    "    compression=\"snappy\",\n",
+    "    index=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "51c8b057",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_light.to_csv(\n",
+    "    \"df_light.csv\",\n",
+    "    sep=\";\",                  # separador ;\n",
+    "    index=False,              # evita exportar el índice\n",
+    "    quoting=1,                # 1 = csv.QUOTE_ALL -> todas las celdas entre comillas\n",
+    "    encoding=\"utf-8-sig\"      # utf-8 con BOM para Excel y caracteres especiales (portugués)\n",
+    ")"
    ]
   }
  ],
