Analis univariado y multivariado

--- a/Exploracion_base_1.ipynb
+++ b/Exploracion_base_1.ipynb
@@ -40,16 +40,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2025-09-18 19:12:27--  https://www.medellin.gov.co/apigeomedellin/atributos/archivos/openDataExt/Gis/open_data/OD396/shp_estrato_socioeconomico.zip\n",
+      "--2025-09-26 10:09:02--  https://www.medellin.gov.co/apigeomedellin/atributos/archivos/openDataExt/Gis/open_data/OD396/shp_estrato_socioeconomico.zip\n",
       "Resolving www.medellin.gov.co (www.medellin.gov.co)... 200.13.232.188, 2801:1d6:0:20:3:0:222:101\n",
       "Connecting to www.medellin.gov.co (www.medellin.gov.co)|200.13.232.188|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 39134047 (37M) [application/zip]\n",
-      "Saving to: ‘shp_estrato_socioeconomico.zip’\n",
+      "Saving to: ‘shp_estrato_socioeconomico.zip.1’\n",
       "\n",
-      "shp_estrato_socioec 100%[===================>]  37.32M  5.17MB/s    in 7.2s    \n",
+      "shp_estrato_socioec 100%[===================>]  37.32M  6.57MB/s    in 9.8s    \n",
       "\n",
-      "2025-09-18 19:12:36 (5.17 MB/s) - ‘shp_estrato_socioeconomico.zip’ saved [39134047/39134047]\n",
+      "2025-09-26 10:09:12 (3.81 MB/s) - ‘shp_estrato_socioeconomico.zip.1’ saved [39134047/39134047]\n",
       "\n"
      ]
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e91d949e",
    "metadata": {},
    "outputs": [
@@ -69,14 +69,7 @@
      "output_type": "stream",
      "text": [
       "Archive:  shp_estrato_socioeconomico.zip\n",
-      "  inflating: estrato_socioeconomico/estrato_socioeconomico.cpg  \n",
-      "  inflating: estrato_socioeconomico/estrato_socioeconomico.dbf  \n",
-      "  inflating: estrato_socioeconomico/estrato_socioeconomico.prj  \n",
-      "  inflating: estrato_socioeconomico/estrato_socioeconomico.sbn  \n",
-      "  inflating: estrato_socioeconomico/estrato_socioeconomico.sbx  \n",
-      "  inflating: estrato_socioeconomico/estrato_socioeconomico.shp  \n",
-      "  inflating: estrato_socioeconomico/estrato_socioeconomico.shp.xml  \n",
-      "  inflating: estrato_socioeconomico/estrato_socioeconomico.shx  \n"
+      "replace estrato_socioeconomico/estrato_socioeconomico.cpg? [y]es, [n]o, [A]ll, [N]one, [r]ename: "
      ]
     }
    ],
@@ -102,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "95e69af0",
    "metadata": {},
    "outputs": [
@@ -151,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "817670ae",
    "metadata": {},
    "outputs": [],
@@ -179,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "873c86f0",
    "metadata": {},
    "outputs": [
@@ -202,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9390c5b9",
    "metadata": {},
    "outputs": [
@@ -330,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ccb97610",
    "metadata": {},
    "outputs": [
@@ -372,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "77a8b86c",
    "metadata": {},
    "outputs": [
@@ -408,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "6fc7bbca",
    "metadata": {},
    "outputs": [
