Modelos lineal y polinomica + Test

--- a/evaluación 3/lineal_polinomica_studentDB.ipynb
+++ b/evaluación 3/lineal_polinomica_studentDB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "78884904",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "06d6a595",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "409e4382",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "8afb5486",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "f0c342fd",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "0cbfcbc9",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "d217c796",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "8eff7de7",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "b404f30e",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "f1eecace",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "5446550a",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "ec7744c4",
    "metadata": {},
    "outputs": [
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "a6fcc3c9",
    "metadata": {},
    "outputs": [
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "1a1b703b",
    "metadata": {},
    "outputs": [
@@ -579,7 +579,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
+   "id": "817b35e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Carpeta 'Student Performance' asegurada.\n",
+      "\n",
+      "✅ Todos los modelos y preprocesadores han sido guardados exitosamente dentro de la carpeta.\n",
+      "-> Archivos guardados en: 'Student Performance/'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# CELDA ADICIONAL: GUARDAR MODELOS Y PREPROCESADORES EN UNA CARPETA ESPECÍFICA\n",
+    "\n",
+    "# 1. Importar las librerías necesarias\n",
+    "import joblib\n",
+    "import os\n",
+    "\n",
+    "# 2. Definir el nombre de la carpeta\n",
+    "NOMBRE_CARPETA = 'Student Performance'\n",
+    "\n",
+    "# 3. Crear la carpeta si no existe\n",
+    "# El `exist_ok=True` evita que salga un error si la carpeta ya fue creada\n",
+    "os.makedirs(NOMBRE_CARPETA, exist_ok=True)\n",
+    "print(f\"Carpeta '{NOMBRE_CARPETA}' asegurada.\")\n",
+    "\n",
+    "# 4. Definir los nombres de los archivos\n",
+    "# Ahora unimos el nombre de la carpeta con el nombre del archivo usando os.path.join()\n",
+    "# Esto crea una ruta correcta como \"Student Performance/modelo_regresion_lineal.joblib\"\n",
+    "ruta_modelo_lineal = os.path.join(NOMBRE_CARPETA, 'modelo_regresion_lineal.joblib')\n",
+    "ruta_modelo_polinomico = os.path.join(NOMBRE_CARPETA, 'modelo_regresion_polinomico.joblib')\n",
+    "ruta_scaler = os.path.join(NOMBRE_CARPETA, 'scaler.joblib')\n",
+    "ruta_poly_features = os.path.join(NOMBRE_CARPETA, 'poly_features.joblib')\n",
+    "\n",
+    "# 5. Guardar los objetos en sus rutas correspondientes\n",
+    "joblib.dump(linear_model, ruta_modelo_lineal)\n",
+    "joblib.dump(poly_model, ruta_modelo_polinomico)\n",
+    "joblib.dump(scaler, ruta_scaler)\n",
+    "joblib.dump(poly_features, ruta_poly_features)\n",
+    "\n",
+    "print(\"\\n✅ Todos los modelos y preprocesadores han sido guardados exitosamente dentro de la carpeta.\")\n",
+    "print(f\"-> Archivos guardados en: '{NOMBRE_CARPETA}/'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "4b2af400",
    "metadata": {},
    "outputs": [
@@ -647,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "b5d94bf5",
    "metadata": {},
    "outputs": [
@@ -697,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "d39373a9",
    "metadata": {},
    "outputs": [],
@@ -711,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "088610cf",
    "metadata": {},
    "outputs": [
@@ -756,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "ebeb424e",
    "metadata": {},
    "outputs": [
@@ -800,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "e9f3e439",
    "metadata": {},
    "outputs": [
@@ -857,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "aa3e66a3",
    "metadata": {},
    "outputs": [
@@ -895,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "eec8ea3f",
    "metadata": {},
    "outputs": [
@@ -903,7 +953,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\juane\\AppData\\Local\\Temp\\ipykernel_14120\\76647180.py:9: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
+      "C:\\Users\\juane\\AppData\\Local\\Temp\\ipykernel_8504\\76647180.py:9: MatplotlibDeprecationWarning: The 'labels' parameter of boxplot() has been renamed 'tick_labels' since Matplotlib 3.9; support for the old name will be dropped in 3.11.\n",
       "  bp = ax.boxplot(errors_data, labels=['Lineal', 'Polinómico'], patch_artist=True,\n"
      ]
     },
@@ -944,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "c57f8ad4",
    "metadata": {},
    "outputs": [
@@ -998,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "26b63241",
    "metadata": {},
    "outputs": [
@@ -1043,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "b64e1d4f",
    "metadata": {},
    "outputs": [
@@ -1117,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "4fe31de5",
    "metadata": {},
    "outputs": [
@@ -1175,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "7d6e01c4",
    "metadata": {},
    "outputs": [
@@ -1225,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "ca882421",
    "metadata": {},
    "outputs": [
@@ -1287,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "4205d7df",
    "metadata": {},
    "outputs": [
@@ -1357,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 31,
    "id": "acaa0259",
    "metadata": {},
    "outputs": [
@@ -1455,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 32,
    "id": "90a2ba83",
    "metadata": {},
    "outputs": [
@@ -1520,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 33,
    "id": "61102c94",
    "metadata": {},
    "outputs": [
@@ -1567,7 +1617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 34,
    "id": "84027d3f",
    "metadata": {},
    "outputs": [
@@ -1645,7 +1695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 35,
    "id": "6f2d1a8e",
    "metadata": {},
    "outputs": [
